<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nourriture</string>
    <string name="main_home">Home</string>
    <string name="main_recipe">Recipe</string>
    <string name="main_topic">Topic</string>
    <string name="main_publish">Publish</string>
    <string name="hello_world">Hello world yeah!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_topic_detail">TopicDetailActivity</string>
    <string name="menu_1">Login/Register</string>
    <string name="recipe_recipeName">Recipe Name</string>
    <string name="recipe_recipeAuthor">Recipe Author Name</string>
    <string name="recipe_recipeCommentNum">Recipe Comment Num</string>
    <string name="recipe_recipeCollectNum">Recipe Collect Num</string>
    <string name="recipe_collectRecipe">Collect</string>
    <string name="recipe_difficultity">Difficultity:</string>
    <string name="recipe_cookTime">Time:</string>
    <string name="recipe_material">Material</string>
    <string name="recipe_step">Step</string>
    <string name="recipe_comment">People say</string>
    <string name="recipe_comment_hint">Your comment:</string>
    <string name="recipe_description">Description</string>
    <string name="title_activity_topic_upload">TopicUploadActivity</string>
    <string name="title_activity_upload_topic">UploadTopicActivity</string>

</resources>
