<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/singleRecipePhoto"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/singleRecipeCollect"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:alpha="50"
                android:paddingRight="10dp"
                android:paddingTop="10dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/singleRecipeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/recipe_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp" >

                <RelativeLayout
                    android:id="@+id/singleAuthorInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <ImageView
                        android:id="@+id/singleRecipeAuthorHead"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/singleRecipeAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/singleRecipeAuthorHead"
                        android:layout_toRightOf="@id/singleRecipeAuthorHead"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="0dp"
                        android:text="@string/recipe_recipeAuthor"
                        android:textColor="#040404"
                        android:textSize="12sp"
                        android:typeface="sans" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/singleCollectNumPic"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:paddingRight="0dp"
                        android:src="@drawable/already_collect" />

                    <TextView
                        android:id="@+id/singleRecipeCollectNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/singleCollectNumPic"
                        android:layout_toRightOf="@id/singleCollectNumPic"
                        android:paddingLeft="3dp"
                        android:paddingRight="0dp"
                        android:text="@string/recipe_recipeCollectNum"
                        android:textColor="#040404"
                        android:textSize="15sp"
                        android:typeface="sans" />

                    <ImageView
                        android:id="@+id/singleCommentNumPic"
                        android:layout_width="35dp"
                        android:layout_height="25dp"
                        android:layout_toRightOf="@id/singleRecipeCollectNum"
                        android:paddingLeft="10dp"
                        android:paddingRight="0dp"
                        android:src="@drawable/comment" />

                    <TextView
                        android:id="@+id/singleRecipeCommentNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/singleCommentNumPic"
                        android:layout_toRightOf="@id/singleCommentNumPic"
                        android:paddingLeft="3dp"
                        android:paddingRight="0dp"
                        android:text="@string/recipe_recipeCommentNum"
                        android:textColor="#040404"
                        android:textSize="15sp"
                        android:typeface="sans" />
                </RelativeLayout>
            </RelativeLayout>

            <SurfaceView
                android:id="@+id/surfaceView1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,2" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/singleRecipeDifficultity"
                        android:layout_width="50dp"
                        android:text="@string/recipe_difficultity" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="fill_parent"
                        android:background="#040404" />

                    <TextView
                        android:id="@+id/singleRecipeTime"
                        android:layout_width="50dp"
                        android:text="@string/recipe_cookTime" />
                </TableRow>
            </TableLayout>

            <SurfaceView
                android:id="@+id/surfaceView2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/recipe_material" />

            <TableLayout
                android:id="@+id/singleMaterialTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1" >

                <SurfaceView
                    android:id="@+id/surfaceView3"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" />
            </TableLayout>

            <SurfaceView
                android:id="@+id/surfaceView4"
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:text="@string/recipe_step" />

            <TableLayout
                android:id="@+id/singleStepTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:stretchColumns="2" >
            </TableLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/singleRecipeComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColor="#ff0000"
                    android:clickable="true"
                    android:onClick="moreComment"
                    android:text="@string/recipe_comment" />

                <!-- <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/singleRecipeComment"
                    android:onClick="moreComment"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp" >

                    <ImageView
                        android:id="@+id/singleMoreComment"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/go" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/singleMoreComment"
                        android:text="more" />
                </RelativeLayout> -->
            </RelativeLayout>

            <!-- <TableLayout
                android:id="@+id/singleCommentTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:stretchColumns="1" >
            </TableLayout> -->

        </LinearLayout>
        
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <EditText
                    android:id="@+id/singleNewComment"
                    android:layout_width="390dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/recipe_comment_hint"
                    android:lines="1" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:onClick="commentIt"
                    android:paddingBottom="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/go" />
            </RelativeLayout>
    </LinearLayout>

</ScrollView>